--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="google" content="notranslate"/>
     <title>Test Project</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0, shrink-to-fit=no"/>
+    <meta name="HandheldFriendly" content="true">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-touch-fullscreen" content="yes"/>
 </head>
 <body>
 <div id="root"></div>
