--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="google" content="notranslate"/>
     <title>Debchik</title>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#2D3142" />
+    <meta name="description" content="Debchik app">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no"/>
     <meta name="HandheldFriendly" content="true">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
+    <meta name="apple-mobile-web-app-title" content="Debchik">
     <meta name="apple-touch-fullscreen" content="yes"/>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 </head>
 <body>
 <div id="root"></div>
